PokeClicker/system.css
#pokedexModal{
	width:100% !important;
}

#navBar{
	border: 1px solid black;
}

.pokeBadge{
	opacity:0.10;
}

#upgradeBox{
	text-align:center;
}

.smallImage{
	height:16px;
	width:16px;
}

.smallImage:hover{
	position:relative;
	
}

.upgradeBoxes{
	border: 1px solid black;
	margin-top:2px;
	margin-bottom:2px;
}

.upgradeBoxes:hover{
	background-color: #F2F2F2;
}

.container {
	width:80% !important
}

#myModalLabel{
	text-align:center;
}

#starterPokemons{
	text-align:center;
}

#console{
	border: 1px solid black;
	width:50%;
	height:300px;
	bottom:50px;
	overflow: scroll;
}

#caughtPokemon{
	border-left: 1px solid black;
	border-top: 1px solid black;
	border-bottom: 1px solid black;	
	width:10% !important;
}

#AttackCaughtPokemon{

	border-top: 1px solid black;
	border-bottom: 1px solid black;	
	width:5% !important
}

#LevelCaughtPokemon{
	border-right: 1px solid black;
	border-top: 1px solid black;
	border-bottom: 1px solid black;	
	text-align:left;
	width:5% !important	
}

#statBox{
	border-left: 1px solid black;
	border-top: 1px solid black;
	border-bottom: 1px solid black;	
	text-align:right;
	width: 10% !important
}

#statBoxStats{
	border-right: 1px solid black;
	border-top: 1px solid black;
	border-bottom: 1px solid black;	
	text-align:right;
	width:8% !important
}

#currentEnemy{
	border: 1px solid black;
	text-align:center
}

